@startuml "Roads and buildings"
skinparam linetype ortho
interface IRandom{
   + nextBool(probability: double): boolean
}

   interface IRoad{
       + getAvailable(): List<IField>
   }

   interface IField implements IRoad{
    + getAvailable(): List<IField> 
    + isUnderGround():bool
    + tryEnter(v: IVehicle): bool
    + tryExit(f: IField): bool
    + interact(): void
    + slip(): void
    + melt(): void
   }

    class Field implements IField
    {
    -underground : bool
    +getAvailable(): List<IField>
    +isUnderGround(): bool
    +tryEnter(v: IVehicle): bool
    +tryExit(next: IField): bool
    +interact(): void
    +slip(): void
    +melt(): void
    }
    
    Field --> "1" IRoad: front
    Field --> "1" IField: right
    Field --> "1" IField: left
    Field --> "1" ILayer: layer
    Field --> "1" ISalt: salt
    Field --> "1" IRandom: random
    
    class CrossRoad implements IRoad
    {
    +getAvailable(): List<IField>
    }
    
    CrossRoad --> "1..*" IField: outFields


  class Home extends Building
    {
    +generateCar(destination: Office): void
    }
    
    
    class Office extends Building
    {
    +consume(c : Car): void
    }
    
    
    class Station extends Building
    {
    +getPair(): Station
    +put(bus: Bus): void
    }
    
    Station "1" -- "1" Station: pair
    
    abstract class Building
    {

    }
    
    Building --> "1" IField: field

    class Random implements IRandom{
        + nextBool(probability : double) : bool
    }
